[package]
name = "wave-function-collapse"
version = "0.1.0"
edition = "2021"
description = "Implementation of wave function collapse targetting wasm"
license = "MIT"
repository = "https://github.com/Hyrasso/wasm-wave-function-collapse"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
serde = {version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.4"